<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:fontFamily="@font/rubik_bold"
        android:textSize="40sp"
        android:layout_marginBottom="15dp">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:layout_margin="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/rubik_medium"
        android:textSize="20sp">
    </TextView>

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:inputType="textEmailAddress"
        >

    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:fontFamily="@font/rubik_medium"
        android:layout_margin="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="20sp">
    </TextView>

    <EditText
        android:id="@+id/inputUserPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:inputType="textPassword"
        >

    </EditText>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="16sp"
        android:fontFamily="@font/rubik_medium"
        android:background="@drawable/button_radius"
        android:layout_margin="15dp"
        android:textColor="@android:color/white"
        android:foreground="?android:attr/selectableItemBackground"/>
</LinearLayout>