<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="2dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardUseCompatPadding="true"
        android:layout_marginBottom="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/user_image"
                    android:layout_height="@dimen/user_image"
                    android:src="@drawable/ic_account_circle_black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/lblUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_regular"
                        android:text="@string/user"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_sub_title_size"
                        android:layout_marginStart="10dp"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/department"
                    android:fontFamily="@font/rubik_regular"
                    android:textColor="@android:color/black"
                    android:layout_marginEnd="5dp"/>
                <TextView
                    android:id="@+id/userDepNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payments"
                    android:fontFamily="@font/rubik_regular"
                    android:textColor="@android:color/black"
                    android:layout_marginEnd="5dp"/>
                <ImageView
                    android:id="@+id/imgVwIconPayStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_payed" />

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>