<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="2dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardUseCompatPadding="true"
        android:layout_marginBottom="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtMonthPayed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/name"
                    android:fontFamily="@font/rubik_medium"
                    />
                <TextView
                    android:id="@+id/txtYearPayed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/rubik_medium"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_symbol"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/rubik_medium"/>

                    <TextView
                        android:id="@+id/txtMountPayed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_medium"

                        />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imgVwIconStatusPayed"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/rubik_medium"
                    android:src="@drawable/ic_payed"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mount_debt"
                    android:layout_marginEnd="5dp"
                    />

                <TextView
                    android:id="@+id/txtMountDebt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_hint"
                    />
            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>