<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardUseCompatPadding="true"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/star_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/padding_small_elements"
                android:paddingBottom="@dimen/padding_small_elements"
                android:paddingLeft="@dimen/padding_components"
                android:paddingRight="@dimen/padding_components"
                android:layout_gravity="center_vertical">

                <EditText
                    android:id="@+id/txtSearchUser"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_footer"
                    android:drawableEnd="@drawable/ic_search"
                    android:hint="@string/search"
                    android:background="@android:color/transparent"
                    android:inputType="text"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:padding="@dimen/padding_small_elements">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build"
                android:fontFamily="@font/rubik_medium"
                android:textSize="18sp"
                android:layout_marginEnd="5dp"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spnOrderBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/builds"
                android:spinnerMode="dropdown" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcVwUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/recycler_padding">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>
    <TextView
        android:id="@+id/lblNotUsersFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_element_found"
        android:gravity="center_horizontal"
        android:layout_gravity="center_vertical"
        android:fontFamily="@font/rubik_medium"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddNewUser"
        android:layout_width="@dimen/floating_button"
        android:layout_height="@dimen/floating_button"
        android:layout_gravity="bottom|end"
        android:layout_margin="15dp"
        android:src="@drawable/ic_user_add"
        android:foreground="?android:attr/selectableItemBackground"
        />



</FrameLayout>